--- a/test-output/index.html
+++ b/test-output/index.html
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.dms.runner.TestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Business Scenario 1 :  B2B - IGST - Individual - CCP - Extended Warranty -   Exchange&quot;, &quot;Business S...)">runScenario("Business Scenario 1 :  B2B - IGST - Individual - CCP - Extended Warranty -   Exchange", "Business S...)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="com.dms.runner.TestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Business Scenario 11 :  B2C - IGST - Individual - CCP - Extended Warranty -  Scrapage&quot;, &quot;Business S...)">runScenario("Business Scenario 11 :  B2C - IGST - Individual - CCP - Extended Warranty -  Scrapage", "Business S...)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -127,10 +127,10 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;Business Scenario 1 :  B2B - IGST - Individual - CCP - Extended Warranty -   Exchange&quot;, &quot;Business S...)">
-                  </a> <!-- runScenario("Business Scenario 1 :  B2B - IGST - Individual - CCP - Extended Warranty -   Exchange", "Business S...) -->
+                  <a name="runScenario(&quot;Business Scenario 11 :  B2C - IGST - Individual - CCP - Extended Warranty -  Scrapage&quot;, &quot;Business S...)">
+                  </a> <!-- runScenario("Business Scenario 11 :  B2C - IGST - Individual - CCP - Extended Warranty -  Scrapage", "Business S...) -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("Business Scenario 1 :  B2B - IGST - Individual - CCP - Extended Warranty -   Exchange", "Business Scenario")</span>
+                  <span class="parameters">("Business Scenario 11 :  B2C - IGST - Individual - CCP - Extended Warranty -  Scrapage", "Business Scenario")</span>
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
@@ -204,7 +204,7 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
 data.setCell(0, 2, 'com.dms.runner.TestRunner')
-data.setCell(0, 3, 101843);
+data.setCell(0, 3, 101623);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
@@ -237,18 +237,18 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.dms.runner.TestRunner</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@1b53e6fc)</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@55e4dd68)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">runScenario("Business Scenario 1 :  B2B - IGST - Individual - CCP - Extended Warranty -   Exchange", "Business S...)</span>
-                <span class="method-start">871 ms</span>
+                <span class="method-name">runScenario("Business Scenario 11 :  B2C - IGST - Individual - CCP - Extended Warranty -  Scrapage", "Business S...)</span>
+                <span class="method-start">1091 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">102719 ms</span>
+                <span class="method-start">102718 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
